<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout 
	    android:id="@+id/controlBar_Review" 
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    	<Button 
	    	    android:id="@+id/review_back"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:gravity="center"
	    	    android:layout_weight="1"
	    	    android:text="@string/directory_cancel"
	    	    android:textSize="20sp" />
	    	<Button 
	    	    android:id="@+id/comments"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:gravity="center"
	    	    android:layout_weight="1"
	    	    android:text="@string/Comments"
	    	    android:textSize="20sp" />
	</LinearLayout>
         

            <ImageView
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_above="@id/controlBar_Review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
             

    
    		<LinearLayout
    		    android:id="@+id/add_comment_bar"
    		    android:layout_above="@id/controlBar_Review"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:orientation="horizontal"
    		    android:background="#96000000">
    		    
    		    	<EditText 
    		    	    android:id="@+id/add_comment"
    		    	    android:layout_height="wrap_content"
    		    	    android:layout_width="match_parent"
    		    	    android:layout_weight="2"
    		    	    android:hint="@string/comment_hint"/>
    		    	
    		    	<Button 
    		    	    android:id="@+id/send_comment"
    		    	    android:layout_height="wrap_content"
    		    	    android:layout_width="match_parent"
    		    	    android:layout_weight="5"
    		    	    android:text="@string/send_review"/>
    		 </LinearLayout>
    

        <ListView
        android:id="@+id/MyListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:layout_above="@id/add_comment_bar">
    	</ListView>
 

</RelativeLayout>