<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    
    <SurfaceView 
        android:id="@+id/camera_shooting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </SurfaceView>
        
    <Button
        android:id="@+id/reverse_shooting"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        
        android:padding="20dp"
        android:text="@string/reverse_shooting" 
        android:textSize="15sp"/>
        
    
    	<LinearLayout 
	    android:id="@+id/controlBar_shooting" 
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    	<Button 
	    	    android:id="@+id/takePic_shooting"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:gravity="center"
	    	    android:layout_weight="1"
	    	    android:text="@string/takePic_shooting"
	    	    android:textSize="20sp"
	    	    android:background="@android:color/transparent" />
	    	<Button 
	    	    android:id="@+id/cancel_shooting"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:gravity="center"
	    	    android:layout_weight="1"
	    	    android:text="@string/cancel_shooting"
	    	    android:textSize="20sp"
	    	    android:background="@android:color/transparent" />
	</LinearLayout>
	
   </RelativeLayout>